2 December 2010: Wouter
	- feature typetransparent localzone, does not block other RR types.

1 December 2010: Wouter
	- Fix bug#338: print address when socket creation fails.

30 November 2010: Wouter
	- Fix storage of EDNS failures in the infra cache.
	- iana portlist updated.

18 November 2010: Wouter
	- harden-below-nxdomain option, default off (because very old
	  software may be incompatible).  We could enable it by default in
	  the future.

17 November 2010: Wouter
	- implement draft-vixie-dnsext-resimprove-00, we stop on NXDOMAIN.
	- make test output nicer.

15 November 2010: Wouter
	- silence 'tcp connect: broken pipe' and 'net down' at low verbosity.
	- iana portlist updated.
	- so-sndbuf option for very busy servers, a bit like so-rcvbuf.

9 November 2010: Wouter
	- unbound-anchor compiles with openssl 0.9.7.

8 November 2010: Wouter
	- release tag 1.4.7.
	- trunk is version 1.4.8.
	- Be lenient and accept imgw.pl malformed packet (like BIND).

5 November 2010: Wouter
	- do not synthesize a CNAME message from cache for qtype DS.

4 November 2010: Wouter
	- Use central entropy to seed threads.

3 November 2010: Wouter
	- Change the rtt used to probe EDNS-timeout hosts to 1000 msec.

2 November 2010: Wouter
	- tag 1.4.7rc1.
	- code review.

1 November 2010: Wouter
	- GOST code enabled by default (RFC 5933).

27 October 2010: Wouter
	- Fix uninit value in dump_infra print.
	- Fix validation failure for parent and child on same server with an
	  insecure childzone and a CNAME from parent to child.
	- Configure detects libev-4.00.

26 October 2010: Wouter
	- dump_infra and flush_infra commands for unbound-control.
	- no timeout backoff if meanwhile a query succeeded.
	- Change of timeout code.  No more lost and backoff in blockage.
	  At 12sec timeout (and at least 2x lost before) one probe per IP
	  is allowed only.  At 120sec, the IP is blocked.  After 15min, a
	  120sec entry has a single retry packet.

25 October 2010: Wouter